--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-body{
-    text-align: center;
-}
 
-#numeri{
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+  }
+  #numbers {
     font-size: 24px;
-    margin: 10px;
-}
+    margin-bottom: 20px;
+  }
